# SatPortSiteSearch

./: .gitignore  package-lock.json  package.json  vite.config.ts
backend/: pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/adapters/: base.py  nasa_power.py  peeringdb.py
backend/app/models/: __init__.py  profile.py  score.py  site.py  user.py
backend/app/routers/: auth.py  scores.py  sites.py
backend/app/schemas/: auth.py  score.py  site.py
backend/app/services/: auth.py  scoring.py
backend/tests/: conftest.py  test_auth.py  test_nasa_power.py  test_peeringdb.py  test_scoring.py  test_site_model.py  test_sites_api.py
docs/: setup-guide.md
docs/superpowers/plans/: 2026-03-31-map-ui-foundation.md  2026-04-02-backend-foundation.md  2026-04-03-frontend-api-wiring.md  2026-04-03-score-breakdown-enrichment.md
docs/superpowers/specs/: 2026-03-31-sitesearch-design.md  2026-04-03-frontend-api-wiring-design.md  2026-04-03-score-breakdown-enrichment-design.md
src/: App.css  App.test.tsx  App.tsx
src/__mocks__/react-map-gl/: maplibre.tsx
src/components/MapView/: MapView.css  MapView.test.tsx  MapView.tsx
src/components/SearchBar/: SearchBar.css  SearchBar.search.test.tsx  SearchBar.test.tsx  SearchBar.tsx
src/components/SitePanel/: ScoreBar.tsx  ScoreBreakdown.tsx  SiteDetail.tsx  SiteForm.tsx  SitePanel.css  SitePanel.test.tsx  SitePanel.tsx
src/components/Toolbar/: Toolbar.css  Toolbar.test.tsx  (+1 more)
src/config/: scoreMetadata.ts
src/services/: api.test.ts  api.ts  geocoding.test.ts  geocoding.ts
src/types/: map.ts  site.ts
